mis à jour modele product
